--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -45,9 +45,20 @@ jobs:
           done
       - id: sort
         run: | 
-          readarray -td $'\0' sorted < <(
-                    printf "%s\n" "${{ steps.files.outputs.all }}" | sort -t/ -k2
-                    )
+          oldIFS="$IFS"; IFS=$'\n'
+          if [[ -o noglob ]]; then
+            setglob=1; set -o noglob
+          else
+            setglob=0
+          fi
+
+          sorted=( $(printf '%s\n' "${{ steps.files.outputs.all }}" |
+                      awk '{ print $NF, $0 }' FS='/' OFS='/' |
+                      sort | cut -d'/' -f2- ) )
+
+          IFS="$oldIFS"; unset oldIFS
+          (( setglob == 1 )) && set +o noglob
+          unset setglob
 
           printf '%s\n' "${sorted[@]}"
           echo "files=`echo ${sorted}`" >> "$GITHUB_OUTPUT"
