--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,16 +40,24 @@ jobs:
       - id: files
         uses: jitterbit/get-changed-files@v1
       - run: |
-          for added_modified_file in ${{ steps.files.outputs.all }}; do
+          for added_modified_file in ${{ steps.files.outputs.all}}; do
             echo ${added_modified_file}
           done
           
       - name: loop over 
         run: |
           cd 
-          for added_modified_file in ${{ steps.sort.outputs.files }}; do
+          for added_modified_file in ${{ steps.files.outputs.all }}; do
+            
             file_name=$(dirname ${added_modified_file} | cut -d'/' -f2)
             echo ${file_name}
+            for cluster_file in ${{ steps.files.outputs.all}}; do
+                if [ "$cluster_file" == "null" ]
+                then
+                  echo ${ cluster_file }
+                  break
+                fi
+              done
             echo ${added_modified_file}
             
           done
