--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,6 +37,10 @@ jobs:
     outputs:
       image: ${{ steps.output-image.outputs.image }}
     steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # OR "2" -> To retrieve the preceding commit.
+
       - id: files
         uses: tj-actions/changed-files@v35
       - run: |
