--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -50,13 +50,7 @@ jobs:
           
       - id: sort
         run: | 
-          readarray -td $'\0' sorted < <(
-                    for i in "${in[@]}"
-                    do     printf '%s %s\0' "${#i}" "$i";
-                    done |
-                            sort -bz -k1,1rn -k2 |
-                            cut -zd " " -f2-
-                    )
+          readarray -td $'\0' sorted < <(for i in "${in[@]}";do printf '%s %s\0' "${#i}" "$i"; done | sort -bz -k1,1rn -k2 | cut -zd " " -f2-)
 
           echo "sorted_files=`${{ sorted }}`" >> "$GITHUB_OUTPUT"
       - id: reverse
