--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -50,9 +50,12 @@ jobs:
           
       - id: sort
         run: | 
-          readarray -td $'\0' sorted < <(for i in "${in[@]}";do printf '%s %s\0' "${#i}" "$i"; done | sort -bz -k1,1rn -k2 | cut -zd " " -f2-)
+          readarray -t array < <(
+              for str in "${array[@]}"; do
+                  printf '%d\t%s\n' "${#str}" "$str"
+              done | sort -k 1,1nr -k 2 | cut -f 2- )
 
-          echo "sorted_files=`${{ sorted }}`" >> "$GITHUB_OUTPUT"
+          echo "sorted_files=`${{ array }}`" >> "$GITHUB_OUTPUT"
       - id: reverse
         run: echo ${{ steps.sort.outputs.sorted_files}}
       
