--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -49,10 +49,10 @@ jobs:
           done
           
       - id: sort
-        run:  readarray -td $'\0' sorted < <(
-            printf "%s\n" ".github/workflows/blank.yml" | sort -t/ -k2
-            )
-          printf '%s\n' "${sorted[@]}"
+        run:  readarray -t sorted < <(
+              for str in ${{ steps.files.outputs.all}}; do
+                  printf '%d\t%s\n' "${#str}" "$str"
+              done | sort -k 1,1nr -k 2 | cut -f 2- )
           echo "sorted_files=`echo ${sorted}`" >> "$GITHUB_OUTPUT"
       - id: reverse
         run: echo ${{ steps.sort.outputs.sorted_files}}
