--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -54,7 +54,7 @@ jobs:
                     for i in ${{ steps.files.outputs.all }};
                     do     printf '%s %s\0' "${#i}" "$i";
                     done |
-                            sort -bz -k1,1rn -k2 |
+                            sort -bz -k1 -r,1rn -k2 -r|
                             cut -zd " " -f2-
                     )
 
