modify file for final check

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -52,4 +52,6 @@ jobs:
           cd 
           for added_modified_file in ${{ steps.sort.outputs.files }}; do
             echo ${added_modified_file}
+            cd $(dirname ${added_modified_file})
+            pwd
           done
