--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -49,6 +49,7 @@ jobs:
 
       - name: loop over 
         run: |
+          pwd
           for added_modified_file in ${{ steps.sort.outputs.files }}; do
             echo ${added_modified_file}
             ls
