--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,23 +35,27 @@ jobs:
             echo ${added_modified_file}
           done
           
-      - name: Setup Credentials
+      - name: List GCP Folders
+        id: list_folders
         run: |
-          pwd
-          
-          PROFILE = (
-          "zs-1",
-          "zs-2")
-          cd gcp
-          mkdir credentials
-          cd credentials
-          for pr in "${PROFILE[@]}"
-          touch shared-services.json
-          touch $pr.json
-          ls
-          echo '${{ secrets.ZS_1_KEY }}' > shared-services.json
-          echo '${{ secrets.ZS_1_KEY }}' > $pr.json
-          done
-     
+          # List folders in your GCP directory and store them in a variable
+          FOLDER_NAMES=$(gsutil ls gs://your-gcp-bucket/path/to/directory/)
 
-      
+          # Replace hyphens with underscores and suffix _KEY to each folder name
+          FOLDER_NAMES_UNDERSCORED=$(echo "$FOLDER_NAMES" | sed 's|-|_|g' | sed 's|gs://your-gcp-bucket/||' | sed 's|/|_KEY\n|g')
+
+          # Convert the folders to a matrix format
+          FOLDER_MATRIX=$(echo "$FOLDER_NAMES_UNDERSCORED" | awk '{print "folder_name=" $1}')
+
+          # Export the matrix as an environment variable
+          echo "$FOLDER_MATRIX" >> $GITHUB_ENV
+
+      - name: Echo Secrets
+        run: |
+          # Read the folder names from the matrix and echo the corresponding secrets
+          while IFS= read -r folder_var; do
+            eval "$folder_var"
+            secret_name="${folder_name}_KEY"
+            secret_value="${{ secrets[secret_name] }}"
+            echo "Secret for $folder_name: $secret_value"
+          done <<< "$folder_matrix"
