--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -48,18 +48,14 @@ jobs:
           FOLDER_MATRIX=$(echo "$FOLDER_NAMES_UNDERSCORED" | awk '{print "folder_name=" $1}')
           echo "$FOLDER_MATRIX" >> $GITHUB_ENV
 
-      - name: Echo Secrets
-
+      - name: Echo Secrets for Folders
         run: |
-          # Read the folder names from the matrix and create environment variables for secrets
+          # Read the folder names from the matrix and echo the respective secrets
           while IFS= read -r folder_var; do
             eval "$folder_var"
             secret_name=$(echo "$folder_name" | sed 's/_/-/g')
 
-            # Access the secret value and set it as an environment variable
-            secret_value=$(gcloud secrets versions access latest --secret="$folder_name")
-            echo "export $secret_name=$secret_value" >> $GITHUB_ENV
+            # Access the GitHub secret value and echo it
+            secret_value="${{ secrets[$secret_name] }}"
+            echo "Secret for $folder_name (Secret name: $secret_name): $secret_value"
           done <<< "$folder_matrix"
-
-          # Source the environment variables to make them available
-          source $GITHUB_ENV
