--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -50,12 +50,13 @@ jobs:
 
       - name: Echo Secrets for Folders
         run: |
-          # Read the folder names from the matrix and echo the respective secrets
+          # Read the folder names from the matrix and set secret_name as an environment variable
           while IFS= read -r folder_var; do
             eval "$folder_var"
             secret_name=$(echo "$folder_name" | sed 's/_/-/g')
-
-            # Access the GitHub secret value and echo it
-            secret_value=$(echo "${{ secrets[$secret_name] }}")
-            echo "Secret for $folder_name (Secret name: $secret_name): $secret_value"
+            echo "SECRET_NAME=$secret_name" >> $GITHUB_ENV
+            # Access the GitHub secret value using the environment variable and echo it
+            secret_value="${{ secrets[env.SECRET_NAME] }}"
+            echo "Secret for $SECRET_NAME (Secret name: $secret_value): $secret_value"
           done <<< "$folder_matrix"
+
