--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -59,5 +59,5 @@ jobs:
             # Access the GitHub secret value using the environment variable and echo it
             secret_value="${{ secrets[env.SECRET_NAME] }}"
             echo "Secret for $SECRET_NAME (Secret name: $secret_value): $secret_value"
-          done <<< "$folder_matrix"
+          done <<< "$folder_matrix[@]"
 
