--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,20 +38,22 @@ jobs:
       - name: List GCP Folders
         id: list_folders
         run: |
-          # List folder names in the "gcp" directory and store them in a variable
-          FOLDER_NAMES=$(ls gcp/)
+          # List folder names in the "gcp" directory and store them in an array
+          IFS=$'\n' read -d '' -r -a FOLDER_NAMES <<< "$(ls gcp/)"
 
           # Process folder names to replace hyphens with underscores and add suffix _KEY
-          FOLDER_NAMES_UNDERSCORED=$(echo "$FOLDER_NAMES" | sed 's|-|_|g' | sed 's|.*|&_KEY|')
+          FOLDER_NAMES_UNDERSCORED=()
+          for folder in "${FOLDER_NAMES[@]}"; do
+            folder_name=$(echo "$folder" | sed 's|-|_|g')
+            FOLDER_NAMES_UNDERSCORED+=("${folder_name}_KEY")
+          done
 
-          # Convert the folders to a matrix format and export it as an environment variable
-          FOLDER_MATRIX=$(echo "$FOLDER_NAMES_UNDERSCORED" | awk '{print "folder_name=" $1}')
-          echo "$FOLDER_MATRIX" >> $GITHUB_ENV
-
+          # Export the array as an environment variable
+          export FOLDER_NAMES_UNDERSCORED
       - name: Echo Secrets for Folders
         run: |
           # Read the folder names from the matrix and set secret_name as an environment variable
-          while IFS= read -r folder_var; do
+          for folder_name in "${FOLDER_NAMES_UNDERSCORED[@]}"; do
             eval "$folder_var"
             secret_name=$(echo "$folder_name" | sed 's/_/-/g')
             echo $secret_name
@@ -59,5 +61,6 @@ jobs:
             # Access the GitHub secret value using the environment variable and echo it
             secret_value="${{ secrets[env.SECRET_NAME] }}"
             echo "Secret for $SECRET_NAME (Secret name: $secret_value): $secret_value"
-          done <<< "$folder_matrix[@]"
-
+          done 
+          
+ 
