--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,24 +26,17 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # OR "2" -> To retrieve the preceding commit.
-
-      - id: files
-        uses: jitterbit/get-changed-files@v1
-      - run: |
-          for added_modified_file in ${{ steps.files.outputs.all }}; do
-            echo ${added_modified_file}
-          done
+          fetch-depth: 0  # OR "2" -> To retrieve the preceding commit
           
-      - name: List GCP Folders
+      - name: Get GCP Folders
         id: list_folders
         run: |
-          # List folder names in the "gcp" directory and store them in an array
-          IFS=$'\n' read -d '' -r -a FOLDER_NAMES <<< "$(ls gcp/)"
+          # Use GitHub API and GitHub CLI to get the GCP folder names
+          FOLDER_NAMES=$(gh api -X GET "/repos/${GITHUB_REPOSITORY}/contents/gcp" | jq -r '.[] | select(.type == "dir") | .name')
 
           # Process folder names to replace hyphens with underscores and add suffix _KEY
           FOLDER_NAMES_UNDERSCORED=()
-          for folder in "${FOLDER_NAMES[@]}"; do
+          for folder in $FOLDER_NAMES; do
             folder_name=$(echo "$folder" | sed 's|-|_|g')
             FOLDER_NAMES_UNDERSCORED+=("${folder_name}_KEY")
           done
