--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Echo Secrets for Folders
         run: |
           # Read the folder names from the matrix and set secret_name as an environment variable
-          FOLDER_NAMES_UNDERSCORED = ("zs_1_KEY")
+          echo 'FOLDER_NAMES_UNDERSCORED = ("zs_1_KEY")'  >> $GITHUB_ENV
           for folder_name in "${FOLDER_NAMES_UNDERSCORED[@]}"; do
             eval "$folder_var"
             secret_name=$(echo "$folder_name" | sed 's/_/-/g')
