--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,6 +34,7 @@ jobs:
         env:
           SECRET_NAME: ZS_DEVOPS_KEY
         run: |
+          echo "SECRET_NAME=ZS_DEVOPS_KEY" >> $GITHUB_ENV
           echo "SECRET_NAME = $SECRET_NAME"
           echo "SECRET_NAME = ${{ env.SECRET_NAME }}"
           SECRET_VALUE=${{ secrets[env.SECRET_NAME] }}
