--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,6 +36,7 @@ jobs:
         run: |
           echo "SECRET_NAME = $SECRET_NAME"
           echo "SECRET_NAME = ${{ env.SECRET_NAME }}"
+          echo "SECRET_NAME = `echo env.${{ env.SECRET_NAME }}`"
           SECRET_VALUE=${{ secrets[env.SECRET_NAME] }}
           echo "SECRET_VALUE = $SECRET_VALUE"
  
