--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,13 +31,13 @@ jobs:
  
       - name: Set Env
         run: |
-          echo "SECRET_NAME=ZS_DEVOPS_KEY" >> $GITHUB_ENV
+          echo "ZS_DEVOPS_KEY=ZS_DEVOPS_KEY" >> $GITHUB_ENV
       - name: Run a multi-line script
         run: |
           echo "SECRET_NAME = $SECRET_NAME"
           echo "SECRET_NAME = ${{ env.SECRET_NAME }}"
           echo "SECRET_NAME = `echo env.${{ env.SECRET_NAME }}`"
-          SECRET_VALUE=${{ secrets[env.SECRET_NAME] }}
+          SECRET_VALUE=${{ secrets[`echo env.${{ env.SECRET_NAME }}`] }}
           echo "SECRET_VALUE = $SECRET_VALUE"
  
           
