--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,11 +31,11 @@ jobs:
  
  
       - id: output-var
-        run: echo "SECRET_NAME = ZS_DEVOPS_KEY" >> "$GITHUB_OUTPUT"
+        run: echo "::set-output name=SECRET_NAME::ZS_DEVOPS_KEY"
         
       - name: Run a multi-line script
         run: |
-          echo "SECRET_NAME_1 = $ steps.output-var.outputs.SECRET_NAME"
+          echo "SECRET_NAME_1 = $steps.output-var.outputs.SECRET_NAME"
           echo "SECRET_NAME_1 = ${{  steps.output-var.outputs.SECRET_NAME }}"
           SECRET_VALUE=${{ secrets[ steps.output-var.outputs.SECRET_NAME] }}
           echo "SECRET_VALUE = $SECRET_VALUE"
