--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,6 +37,7 @@ jobs:
         run: |
           echo "SECRET_NAME_1 = $steps.output-var.outputs.SECRET_NAME"
           S_N  = SECRET_NAME
+          echo $S_N
           echo "SECRET_NAME_1 = ${{  'steps.output-var.outputs.$S_N' }}"
           SECRET_VALUE=${{ secrets[ 'steps.output-var.outputs.$S_N'] }}
           echo "SECRET_VALUE = $SECRET_VALUE"
