--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,10 +36,10 @@ jobs:
       - name: Run a multi-line script
         run: |
           echo "SECRET_NAME_1 = $steps.output-var.outputs.SECRET_NAME"
-          S_N  = SECRET_NAME
-          echo $S_N
-          echo "SECRET_NAME_1 = ${{  'steps.output-var.outputs.$S_N' }}"
-          SECRET_VALUE=${{ secrets[ 'steps.output-var.outputs.$S_N'] }}
+          S_N  = "SECRET_NAME"
+          echo "$S_N"
+          echo "SECRET_NAME_1 = ${{  'steps.output-var.outputs.${S_N}' }}"
+          SECRET_VALUE=${{ secrets[ 'steps.output-var.outputs.${S_N}'] }}
           echo "SECRET_VALUE = $SECRET_VALUE"
  
           
