Update blank.yml trim

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,6 +36,10 @@ jobs:
           echo "SECRET_NAME=$secret_name" >> $GITHUB_ENV
           echo "SECRET_NAME = $SECRET_NAME"
           echo "SECRET_NAME = ${{ env.SECRET_NAME }}"
+          input_string  = ${{ env.SECRET_NAME }}
+          local trimmed_string="${input_string%_KEY}"
+          local transformed_string="${trimmed_string//_/-}"
+          echo "$transformed_string"
           SECRET_VALUE=${{ secrets[env.SECRET_NAME] }}
           echo "SECRET_VALUE = $SECRET_VALUE"
           
