--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,17 +30,17 @@ jobs:
     steps:
       - name: Setup Env
         run: |
+          ORIGINAL_SECRET=$INPUT_MY_VARIABLE_KEY
+          TRANSFORMED_SECRET=$(echo "$ORIGINAL_SECRET" | sed -e 's/_KEY$//' -e 's/_/-/g')
+          echo "FILE_NAME=$TRANSFORMED_SECRET" >> $GITHUB_ENV
           echo "SECRET_NAME=${{ matrix.secret }}" >> $GITHUB_ENV
       - name: Run a multi-line script
         run: |
           echo "SECRET_NAME=$secret_name" >> $GITHUB_ENV
           echo "SECRET_NAME = $SECRET_NAME"
           echo "SECRET_NAME = ${{ env.SECRET_NAME }}"
-          input_string  = ${{ env.SECRET_NAME }}
-          local trimmed_string="${input_string%_KEY}"
-          local transformed_string="${trimmed_string//_/-}"
-          echo "$transformed_string"
           SECRET_VALUE=${{ secrets[env.SECRET_NAME] }}
           echo "SECRET_VALUE = $SECRET_VALUE"
+          echo "FILE_NAME = ${{ env.FILE_NAME}}"
           
  
